bind sean's work to UI